# modelconverter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  TASK.md  docker-compose.yaml  fake_fps_metric.csv  fake_fps_metric.lp  pyproject.toml  requirements-analysis.txt  requirements-bench.txt  requirements-dev.txt  requirements.txt
.github/workflows/: actions_autoupdate.yaml  bom-test.yaml  fps_benchmark_influx.yaml  hailo_publish.yaml  hailo_test.yaml  modelconverter_test.yaml  publish.yaml  python-publish.yml  rvc2_publish.yaml  rvc2_test.yaml  rvc3_publish.yaml  rvc3_test.yaml  rvc4_publish.yaml  rvc4_test.yaml  semgrep.yaml  unittests.yaml
docker/bases/: Dockerfile.base  Dockerfile.base-hailo
docker/extra_packages/: mo_patch.diff
docker/hailo/: Dockerfile  Dockerfile.base  Dockerfile.internal  Dockerfile.public  entrypoint.sh
docker/patches/: mo-2021.4.patch  mo-2022.3.patch
docker/rvc2/: Dockerfile  Dockerfile.public  compile_tool  entrypoint.sh  requirements.txt
docker/rvc3/: Dockerfile  Dockerfile.public  entrypoint.sh  requirements.txt
docker/rvc4/: Dockerfile  Dockerfile.public  entrypoint.sh  requirements.txt
docker/scripts/: compile_tool  install_openssl.sh  mo  ov_infer  ov_infer.py  pot
modelconverter/: __init__.py  __main__.py
modelconverter/cli/: types.py  utils.py
modelconverter/docker/hailo/: Dockerfile
modelconverter/docker/patches/: mo-2022.3.patch
modelconverter/docker/rvc2/: entrypoint.sh
modelconverter/docker/rvc3/: Dockerfile
modelconverter/docker/rvc4/: Dockerfile
modelconverter/hub/: README.md  __init__.py  __main__.py  convert.py  enums.py  hub_requests.py  typing.py
modelconverter/utils/: __init__.py  adb_handler.py  adb_id.py  adb_monitor.py  calibration_data.py  config.py  constants.py  device_handlers.py  device_monitors.py  docker_utils.py  encodings.py  environ.py  exceptions.py  filesystem_utils.py  general.py  hub_requests.py  hubai_utils.py  image.py  layout.py  metadata.py  nn_archive.py  onnx_compatibility.py  onnx_tools.py  progress_handler.py  shape.py  subprocess.py  target_versions.py  telemetry.py  types.py
shared_with_container/configs/: defaults.yaml  mnist.yaml  multistage.yaml  resnet18.yaml  resnet18_IR.yaml  yolov6n.yaml  yolov8n_seg.yaml
tests/: __init__.py  conftest.py
tests/test_benchmark/: benchmark_targets.json  conftest.py  run_hil_tests.sh  test_benchmark_regression.py
tests/test_packages/: common.py  onnx_inferer.py  test_cross_format_export.py  test_hailo.py  test_rvc2.py  test_rvc3.py  test_rvc4.py
tests/test_packages/metrics/: __init__.py  base_metric.py  mnist_metric.py  resnet_metric.py  yolov6_metric.py
tests/test_utils/: conftest.py  test_config.py  test_filesystem.py  test_image.py  test_layout.py  test_modifier.py  test_onnx_compatibility.py  test_shape.py  test_subprocess.py  test_telemetry.py
tools/: convert_hub_rvc4_models.py
zoo_migration/: adb_snpe_update.sh  analyze_results.py  convert_hub_rvc4_models.py  data_manager.py  download_datasets.py  mapping.csv  mappings.csv  metric.py  show_segmentation.py  snpe_migration_tester.py  temp_combination_tool.py
