[project]
name = "modelconv"
version = "0.1.2"
description = "Converter for neural models into various formats."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Luxonis", email = "support@luxonis.com" }]
maintainers = [{ name = "Luxonis", email = "support@luxonis.com" }]
keywords = ["ml", "onnx", "openvino", "nn", "ai", "embedded"]
dynamic = ["dependencies", "optional-dependencies"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.8",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Image Recognition",
]

[project.scripts]
modelconverter = "modelconverter.__main__:app"

[project.urls]
repository = "https://github.com/luxonis/modelconverter"
issues = "https://github.com/luxonis/modelconverter/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
bench = { file = ["requirements-bench.txt"] }
dev = { file = ["requirements-dev.txt", "requirements-bench.txt"] }

[tool.ruff]
target-version = "py38"
line-length = 79
indent-width = 4

[tool.ruff.lint]
ignore = ["F403", "B028", "B905", "D1", "W191"]
select = ["E4", "E7", "E9", "F", "W", "B", "I"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true

[tool.pyright]
typeCheckingMode = "basic"
